src/frontend/src/styles.scss
@import "primeng/resources/themes/aura-dark-blue/theme.css";
@import "primeng/resources/primeng.css";
@import "primeicons/primeicons.css";

:root {
    --mobile-max-width: 600px;
}

html,
body {
    font-size: 14px;
    height: 100%;
    padding: 0;
    margin: 0;
}

//Fixing dialogs
.p-dialog {
    border-radius: 0;
    box-shadow: 0px 0px 28px 0px rgba(0, 0, 0, 0.59);
}

.p-dialog .p-dialog-header {
    border-radius: 0;
}

.p-dialog .p-dialog-content:last-of-type {
    border-radius: 0;
}

@layer primeng {
    :root {
        --border-radius: 0;
    }

}

.p-card {
    border-radius: var(--border-radius);
}

.fullHeight {
    height: 100%;
    overflow-y: hidden;
}

.oneLine {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: block;
}

.flex-row {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.flex-row-1 { @extend .flex-row; gap: 1rem; }
.flex-row-2 { @extend .flex-row; gap: 2rem; }
.flex-row-3 { @extend .flex-row; gap: 3rem; }

.flex-col {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.flex-col-1 { @extend .flex-col; gap: 1rem; }
.flex-col-2 { @extend .flex-col; gap: 2rem; }
.flex-col-3 { @extend .flex-col; gap: 3rem; }

.header-value {
    text-align: right;
    display: flex;
    flex-direction: column;
    padding-right: 0.5rem;
    border-right: 1px solid var(--gray-600);
}

.table {

    display: flex;
    flex-direction: column;
    width: 100%;

    >*.header {
        font-weight: bold;
        border-bottom: 1px solid var(--gray-600);
    }

    >* {
        display: flex;
        padding: 0.5rem;
        
        >div:not(:last-child) {
            padding-right: 1rem;
        }
    }   
}

.sideDialog {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    margin: 0;
    padding: 0;
    max-height: inherit;
}

.p-dialog-content {
    padding: 0;
}

.vertical {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.horizontal {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 2rem;
}

.spacer {
    flex: 1;
}

@media only screen and (min-width: 1000px) {
    .only-mobile {
        display: none !important;
    }
    .hidden-on-desktop {
        display: none !important;
    }
    .horizontal-on-mobile {
        flex-direction: row;
    }
}

@media only screen and (max-width: 1000px) {
    .only-desktop {
        display: none !important;
    }
    .hidden-on-mobile {
        display: none !important;
    }
    .vertical-on-mobile {
        flex-direction: column;
        align-items: start;
    }
}

* {
    user-select: none;
}

